@@ -2,7 +2,7 @@ Package: transcriptogramer
 Type: Package
 Title: Transcriptional analysis based on transcriptograms
 Version: 1.3.6
-Date: 2018-06-25
+Date: 2018-09-10
 Authors@R: c(
     person("Diego", "Morais", email = "vinx@ufrn.edu.br",
     role = c("aut", "cre")),
@@ -39,7 +39,7 @@ Imports: biomaRt,
     stats,
     tidyr,
     topGO
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown, RUnit, BiocGenerics
 SystemRequirements: Java Runtime Environment (>= 6)
