@@ -62,6 +62,7 @@ importFrom(stats,smooth.spline)
 importFrom(tidyr,gather)
 importFrom(topGO,GenTable)
 importFrom(topGO,annFUN.gene2GO)
+importFrom(topGO,genesInTerm)
 importFrom(topGO,groupGOTerms)
 importFrom(topGO,runTest)
 importFrom(utils,head)
