@@ -35,6 +35,9 @@
 #'
 #' @slot Terms A data.frame containing the enriched Gene Ontology terms.
 #'
+#' @slot topGOdata A list of GO terms and its respective ENSEMBL Peptide IDs, feeded by
+#' the clusterEnrichment() method.
+#'
 #' @seealso
 #' \link[transcriptogramer]{transcriptogramPreprocess},
 #' \link[transcriptogramer:DE-method]{DE},
@@ -45,7 +48,8 @@
 #' \link[transcriptogramer:transcriptogramStep2-method]{transcriptogramStep2},
 #' \link[transcriptogramer:differentiallyExpressed-method]{differentiallyExpressed},
 #' \link[transcriptogramer:clusterVisualization-method]{clusterVisualization},
-#' \link[transcriptogramer:clusterEnrichment-method]{clusterEnrichment}
+#' \link[transcriptogramer:clusterEnrichment-method]{clusterEnrichment},
+#' \link[transcriptogramer:enrichmentPlot-method]{enrichmentPlot}
 #'
 #'
 #' @author
@@ -58,10 +62,10 @@ setClass("Transcriptogram", representation(association = "data.frame",
     transcriptogramS2 = "data.frame", DE = "data.frame",
     radius = "integer", status = "integer", clusters = "list", pbc = "logical",
     Protein2Symbol = "data.frame", Protein2GO = "data.frame",
-    Terms = "data.frame"),
+    Terms = "data.frame", topGOdata = "list"),
     prototype = list(association = data.frame(),
         ordering = data.frame(), transcriptogramS1 = data.frame(),
         transcriptogramS2 = data.frame(),
         DE = data.frame(), radius = 0L, status = NA_integer_, clusters = list(),
         pbc = FALSE, Protein2Symbol = data.frame(), Protein2GO = data.frame(),
-        Terms = data.frame()))
+        Terms = data.frame(), topGOdata = list()))
