@@ -6,6 +6,14 @@ title = {Reproducibility enhancement and differential expression of non predefin
 year = {(2014)}
 }
 
+@article{Xavier2017,
+author = {Xavier, S. R. M. et al.},
+doi = {10.1093/mutage/gew068},
+journal = {Mutagenesis},
+title = {Analysis of genome instability biomarkers in children with non-syndromic orofacial clefts},
+year = {(2017)}
+}
+
 @article{Filho2011,
 author = {Rybarczyk-Filho, J. L. et al.},
 doi = {10.1093/nar/gkq1269},
